--- a/package.json
+++ b/package.json
@@ -3,19 +3,28 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.0.0",
-    "@angular/cdk": "^9.2.0",
-    "@angular/common": "^8.0.0",
-    "@angular/compiler": "^8.0.0",
-    "@angular/core": "^8.0.0",
-    "@angular/forms": "^8.0.0",
+    "@angular/animations": "^9.0.0 || ^10.0.0-0",
+    "@angular/cdk": "9.2.0",
+    "@angular/common": "8.0.0",
+    "@angular/compiler": "8.0.0",
+    "@angular/core": "8.0.0",
+    "@angular/flex-layout": "^9.0.0-beta.29",
+    "@angular/forms": "8.0.0",
     "@angular/material": "^9.2.0",
-    "@angular/platform-browser": "^8.0.0",
-    "@angular/platform-browser-dynamic": "^8.0.0",
-    "@angular/router": "^8.0.0",
-    "core-js": "2",
-    "rxjs": "^6.5.2",
-    "zone.js": "^0.9.1"
+    "@angular/platform-browser": "8.0.0",
+    "@angular/platform-browser-dynamic": "8.0.0",
+    "@angular/router": "8.0.0",
+    "@swimlane/ngx-charts": "^13.0.2",
+    "@swimlane/ngx-datatable": "^16.0.3",
+    "@types/chartist": "^0.9.38",
+    "chartist": "^0.11.4",
+    "core-js": "2.6.9",
+    "firebase": "^7.13.1",
+    "hammerjs": "^2.0.8",
+    "ng-chartist": "^4.1.0",
+    "rxjs": "6.5.2",
+    "tslib": "1.11.1",
+    "zone.js": "0.9.1"
   },
   "scripts": {
     "ng": "ng",
