--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase": "^7.13.1",
     "hammerjs": "^2.0.8",
     "ng-chartist": "^4.1.0",
+    "node-sass": "^4.13.1",
     "rxjs": "6.5.2",
     "tslib": "1.11.1",
     "zone.js": "0.9.1"
