--- a/package.json
+++ b/package.json
@@ -3,30 +3,31 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.0 || ^10.0.0-0",
-    "@angular/cdk": "9.2.0",
-    "@angular/common": "8.0.0",
-    "@angular/compiler": "8.0.0",
-    "@angular/core": "8.0.0",
-    "@angular/flex-layout": "^9.0.0-beta.29",
-    "@angular/forms": "8.0.0",
-    "@angular/material": "^9.2.0",
-    "@angular/platform-browser": "8.0.0",
-    "@angular/platform-browser-dynamic": "8.0.0",
-    "@angular/router": "8.0.0",
+    "@angular-devkit/core": "8.1.0",
+    "@angular/animations": "^8.2.14",
+    "@angular/cdk": "8.2.3",
+    "@angular/cli": "^8.3.25",
+    "@angular/common": "8.2.14",
+    "@angular/compiler": "8.2.14",
+    "@angular/core": "8.2.14",
+    "@angular/flex-layout": "^7.0.0-beta.19",
+    "@angular/forms": "8.2.14",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "8.2.14",
+    "@angular/platform-browser-dynamic": "8.2.14",
+    "@angular/router": "8.2.14",
     "@swimlane/ngx-charts": "^13.0.2",
     "@swimlane/ngx-datatable": "^16.0.3",
     "@types/chartist": "^0.9.38",
-    "chartist": "^0.11.4",
-    "core-js": "2.6.9",
-    "firebase": "^7.13.1",
+    "chartist": "^0.11.3",
+    "core-js": "^2.6.11",
     "hammerjs": "^2.0.8",
-    "jquery": "^3.4.1",
-    "ng-chartist": "^4.1.0",
+    "ng-chartist": "4.1.0",
     "node-sass": "^4.13.1",
-    "rxjs": "6.5.2",
-    "tslib": "1.11.1",
-    "zone.js": "0.9.1"
+    "rxjs": "^6.5.4",
+    "rxjs-compat": "^6.5.4",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.9.1"
   },
   "scripts": {
     "ng": "ng",
@@ -37,24 +38,26 @@
     "e2e": "ng e2e"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "~7.0.2",
-    "@angular/compiler-cli": "~7.0.0",
-    "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
+    "@angular-devkit/build-angular": "^0.801.3",
+    "@angular/compiler-cli": "8.2.14",
+    "@angular/language-service": "8.2.14",
+    "@types/chartist": "^0.9.47",
+    "@types/jasmine": "~3.3.8",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/jquery": "^3.3.32",
+    "@types/node": "^6.0.118",
+    "codelyzer": "^5.2.1",
+    "jasmine-core": "~3.4.0",
+    "jasmine-spec-reporter": "~4.1.0",
+    "karma": "~1.7.0",
+    "karma-chrome-launcher": "~2.1.1",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.4.3",
+    "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.1.1"
+    "protractor": "~5.1.2",
+    "ts-node": "~3.2.0",
+    "tslint": "~5.7.0",
+    "typescript": "3.4.5"
   }
 }
